Create a seperate config directory for safe mode (windows)
Bug: N/A
Test: N/A
Change-Id: I7039d719835475c8f44d7473ac0fc19be3f43159

GitOrigin-RevId: ab67ea601b505fa9ff024a22fec22decd5c3a1e8